tests/baselines/reference/staticInstanceResolution4.errors.txt
tests/cases/compiler/staticInstanceResolution4.ts(5,3): error TS2339: Property 'foo' does not exist on type '类为 A'.


==== tests/cases/compiler/staticInstanceResolution4.ts (1 errors) ====
    class A {
       public foo() {}
    }
    
    A.foo();
      ~~~
!!! error TS2339: Property 'foo' does not exist on type '类为 A'.